--- a/vue-project/package.json
+++ b/vue-project/package.json
@@ -7,7 +7,10 @@
     "preview": "vite preview --port 4173"
   },
   "dependencies": {
-    "vue": "^2.7.7"
+    "@popperjs/core": "^2.11.6",
+    "bootstrap": "^5.2.2",
+    "vue": "^2.7.7",
+    "vue-router": "^3.6.5"
   },
   "devDependencies": {
     "@vitejs/plugin-legacy": "^2.0.0",
